[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://IPItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://grey.tres" type="Theme" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -250.0
margin_right = 200.0
margin_bottom = 250.0
rect_min_size = Vector2( 200, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 375.0
margin_bottom = 475.0
rect_min_size = Vector2( 350, 450 )

[node name="Header" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 22.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Header"]
margin_right = 305.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Pinger"

[node name="Add" type="Button" parent="CenterContainer/VBoxContainer/Header"]
margin_left = 309.0
margin_right = 329.0
margin_bottom = 22.0
text = "+"

[node name="Subtract" type="Button" parent="CenterContainer/VBoxContainer/Header"]
margin_left = 333.0
margin_right = 350.0
margin_bottom = 22.0
text = "-"

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 350.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="IPItems" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ScrollContainer"]
margin_right = 350.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="IPItem" parent="CenterContainer/VBoxContainer/ScrollContainer/IPItems" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 350.0
margin_bottom = 22.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 350.0
margin_bottom = 150.0

[node name="PingButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 173.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Ping"

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 177.0
margin_right = 350.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Output" type="TextEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 350.0
margin_bottom = 450.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
readonly = true
show_line_numbers = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/Header/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Header/Subtract" to="." method="_on_Subtract_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/PingButton" to="." method="_on_PingButton_pressed"]
